Header alignment corrected

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -53,6 +53,11 @@ body {
 	border-radius: 5px;
 }
 
+.mainHeader {
+	text-align: center;
+  
+}
+
 label {
 	font-weight: 300;
 }
